[package]
name = "rencounter_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocrs = { git = "https://github.com/robertknight/ocrs.git" }
anyhow = "1.0.80"
rayon = "1.7.0"
rten = { version = "0.13.1" }
rten-imageproc = { version = "0.13.1" }
rten-tensor = { version = "0.13.1" }
rten-imageio = { version = "0.13.1" }
fastrand = "2.1.1"
lexopt = "0.3.0"
regex = "1.10.4"
image = "0.25.1"
repng = "0.2.2"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
ratatui = "0.28.1"
crossterm = "0.28.1"
xcap = "0.0.13"
slint = "1.10.0"
